# HandWritting_HanZi

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt
examples/: demo.py
src/: __init__.py  generator.py
src/animation/: __init__.py  gif_encoder.py  svg_encoder.py  vector_svg_encoder.py
src/core/: __init__.py  mask_algorithm.py
src/data/: __init__.py  font_manager.py  graphics_loader.py  svg_parser.py
src/utils/: __init__.py  config.py
